--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
             <th>ACTION</th>
         </tr>
     </thead>
-    <tbody></tbody>
+    <tbody>
+      <tr>
+        <td colspan="4" style="text-align: center;">No tasks found.</td>
+      </tr>
+    </tbody>
     </table>
     </section>
     
